# rpg_engine

./: .gitignore  Makefile  runtests.sh
src/: .battle.hpp.swp  .character.hpp.swp  .stats.hpp.swp  battle.cpp  battle.hpp  character.hpp  defines.hpp  logger.cpp  logger.hpp  main.cpp  stats.hpp
testing/: .battle_tests.cpp.swp  .character_tests.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  battle_tests.cpp  character_tests.cpp  cmake_install.cmake  log_tests.cpp  runTests.out  tests.cpp
